# aoc

./: README.md  pyproject.toml
.github/workflows/: install-test.yaml  unit-test.yaml
src/aoc/: __init__.py  aoc_cell.py  block_matrix.py  ensemble.py  enums.py  hardware_parameters.py  models.py  simple_cell.py  structured_model.py  utils.py
src/aoc/deq_config/: default.yaml
src/aoc/hw_config/: April2025_corrected_pd_3.yaml  June2024_saturation_pieces_clip2p6.yaml
tests/: test_aoc_cell.py  test_models.py  test_structured_model.py
