[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch~=2.2",
    "torchvision~=0.17",
    "torchaudio~=2.2",
    "pytorch-cuda==11.8",
    "tensorboard~=2.12",
    "omegaconf~=2.3",
    "scikit-learn~=1.3",
    "jupyter~=1.0",
    "scipy~=1.11",
    "black~=23.11",
    "mypy~=1.5",
    "pylint~=2.16",
    "pytest~=7.4",
    "diffusers",
    "pandas~=2.1",
    "tqdm~=4.65",
    "pyaml~=20.4",
    "einops~=0.7",
    "pre-commit~=3.6",
    "seaborn~=0.13",
    "azureml-mlflow~=1.55",
    "torchmetrics~=1.3",
    "torchmetrics[image]",
    "imageio~=2.34",
    "wandb==0.17.3"
]

[project.optional-dependencies]
pip = [
    "artifacts-keyring",
    "-e ./arraycomms"
]