[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "0.1.0"
description = "Digital twin used for training of AI models run on the analog-optical computer (AOC)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "pytest~=7.4",
    "pyaml~=20.4",
    "einops~=0.7",
    "torchdeq==0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aoc.hw_config" = ["*.yaml"]
"aoc.deq_config" = ["*.yaml"]
